<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginDetail.FBTermsConditions">
    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_50"
                android:src="@drawable/happnlogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cantora_one"
                android:text="Our Terms of Service"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="30dp"
                android:text="@string/terms_and_condition"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="30dp"
                android:text="@string/terms_and_condition2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="30dp"
                android:text="@string/terms_and_condition3"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAcceptTermsOfServiceFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_50"
        android:background="@drawable/btncolor"
        android:text="Accept Terms Of Service"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>